--- a/boost.html
+++ b/boost.html
@@ -146,7 +146,7 @@
 
             </div>
 
-            <div class="boosters-button m-b-1" id="recharge" data-id="recharge">
+            <div class="boosters-button" id="recharge" data-id="recharge">
 
                 <div class="boosters-button-detail">
                     <div class="boosters-button-image">
@@ -174,32 +174,7 @@
 
             </div>
 
-            <div class="boosters-button">
 
-                <div class="boosters-button-detail disabled">
-                    <div class="boosters-button-image">
-                        <img src="./assets/images/robot_face.png" width="45px">
-                    </div>
-                    <div>
-                        <div>
-                            <h4>Tap Bot</h4>
-                            <span class="soon-boost">soon</span>
-                        </div>
-                        <div class="boosters-button-data">
-                            <img src="./assets/images/coin.png" width="20px" class="m-r-25">
-                            <h5 class="m-r-25">100,000</h5>
-                        </div>
-                    </div>
-                </div>
-
-                <div>
-                    <svg width="30px" height="30px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M9 5L14.15 10C14.4237 10.2563 14.6419 10.5659 14.791 10.9099C14.9402 11.2539 15.0171 11.625 15.0171 12C15.0171 12.375 14.9402 12.7458 14.791 13.0898C14.6419 13.4339 14.4237 13.7437 14.15 14L9 19" stroke="#ffffff" opacity="0.4" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
-                </div>
-
-
-            </div>
         </div>
     </div>
     <!--<div class="boosters">
